--- a/html-css-js-portfolio-tutorial-2-main/index.html
+++ b/html-css-js-portfolio-tutorial-2-main/index.html
@@ -320,7 +320,7 @@
         </ul>
       </div>
     </nav>
-    <p>Copyright &#169; 2023 Bibhu Kalyan. All Rights Reserved.</p>
+    <p>Copyright &#169; 2023 Bibhu Kalyan. ok done</p>
   </footer>
   <script src="script.js"></script>
 </body>
